√ Corrected: Inability to make selection on items inside Frame Component √ Changed: Import Fonts √ Corrected: Overflow scrolling problem

--- a/src/components/styles/footer.sass
+++ b/src/components/styles/footer.sass
@@ -6,5 +6,7 @@
     height: 100px
     background:         
         color: $accent-darker
+    border-top: 3px solid $accent-prime
     h1
+        color: $base-prime
         margin-top: 0
