--- a/src/components/styles/layout.sass
+++ b/src/components/styles/layout.sass
@@ -1,5 +1,15 @@
 //Imports
 @import './variables/_variables.sass'
+@import url('https://fonts.googleapis.com/css?family=Lato|Unica+One')
+// @import url('https://fonts.googleapis.com/css?family=Comfortaa|Lato|Ubuntu')
+
+h1 , h2, h3 
+    font-family: 'Unica One', cursive
+    // font-family: 'Comfortaa', cursive
+    color: $base-lighter
+h4, h6, p, input, label 
+    font-family: 'Lato', sans-serif
+    // font-family: 'Ubuntu', sans-serif
 
 // Component Styles
 html
@@ -7,37 +17,42 @@ html
 main 
     display: flex
     @media (max-width: 800px)     
+        align-items:  center
         display: flexbox
         flex-direction: column
-        align-items:  center
 
     .mapContainer
+        // border-bottom: 4px groove $accent-prime
         flex-grow: 2
         height: 100vh
-        border-bottom: 3px solid $accent-prime
+        margin-top: 64px
 
         @media (max-width: 800px)  
-            height: 100vh
+            border-left: 4px groove $accent-prime
+            margin-top: 56px
             max-height: 55vh
             width: 100vw
+            
 
     .framesContainer
         background-color: $base-light
-        border-width: 0px 0px 3px 2px
-        border-style:  solid
         border-color:  $accent-prime
+        border-style:  groove
+        border-width: 0px 0px 0px 2px
         display: flex
         flex-wrap: wrap
+        height: 100vh
         justify-content: space-around
-        max-height: 100vh
-        overflow-y: scroll
+        margin-top: 64px
+        overflow: scroll
         width: calc(100% * .45)
 
         @media (max-width: 800px)  
             background-color: $base-light
-            border-width: 2px 0px 0px 3px
-            border-style:  solid
+            border-width: 0px 0px 0px 4px
+            border-style:  groove
             border-color:  $accent-prime 
+            margin-top: 0px
 
             width: 100vw
 
