--- a/src/components/styles/places.sass
+++ b/src/components/styles/places.sass
@@ -1,10 +1,9 @@
 
 .placesTitle
-    margin-top: calc(64px + 40px)
+    margin-top: 40px
 
 .placesComponent
     display: flex 
     flex-wrap: wrap
     justify-content: space-around
     width: 100%
-    overflow-y: scroll
