--- a/src/components/styles/scene.sass
+++ b/src/components/styles/scene.sass
@@ -2,12 +2,10 @@
 
 .sceneComponent
     width: 100%
-    overflow: scroll
 
     .sceneHero
         height: 300px
         width: 100%
-        border-bottom: 2px inset $accent-prime
             
         .mdl-button--mini-fab
             position: relative
@@ -16,23 +14,20 @@
             background: 
                 color: $action-no
             i.material-icons
-                position: relative
-                left: 35%
-                top: 50%
                 color: white
                 font-size: 2.5rem
+                left: 35%
+                position: relative
+                top: 50%
+
     h3.sceneName
         color: $accent-dark
-        text-decoration: underline
         margin-top: 30px
         text-align: center
+        text-decoration: underline
     p.area
-        text-decoration: dashed
+        color: $accent-darker
         font:
             size: 2rem
-        color: $accent-darker
         text-align: center
-
-
-
-    
+        text-decoration: dashed
